syntax = "proto3";

package spine.protodata.cli.test;

import "spine/options.proto";
import "spine/time_options.proto";
import "spine/protodata/cli/test/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.protodata.cli.test";
option java_outer_classname = "TestProto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "spine/protodata/ast.proto";

message Project {
    string uuid = 1;
}

message Type {

    string custom_field_for_test = 1 [(.spine.protodata.cli.test.custom) = { bar: "yes" }];
}

message SpineAnnotatedType {

    string required_field_for_test = 1 [(required) = true];

    google.protobuf.Timestamp value_in_future = 2 [(when).in = FUTURE];
}
